<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    android:background="@android:color/transparent">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="#ccd6e6">

        <TextView
            android:id="@+id/txtDisplayInputs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"/>


    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#000000">

    </LinearLayout>

    <TextView
        android:id="@+id/txtDisplayResult"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:gravity="end"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:background="#c1d6c2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/about_calculator"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnAc"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/ac"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>
            <Button
                android:id="@+id/btnX"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/c"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/div"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_7"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_8"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btn9"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_9"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnMul"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/x"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_4"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_5"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btn6"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_6"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnMin"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/min"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_1"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:text="@string/_2"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btn3"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:textColor="#ffffff"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_3"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/plus"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>
            <Button
                android:id="@+id/btn0"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:text="@string/_0"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:text="@string/dot"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0sp"
                android:layout_weight="10"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:text="@string/equal"/>

            <TextView
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""/>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/btnCalcInterfaceCancel"
            android:layout_width="0sp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fa0a22"/>

        <TextView
            android:id="@+id/btnCalcInterfaceOk"
            android:layout_width="0sp"
            android:layout_weight="50"
            android:layout_height="match_parent"
            android:text="@string/include"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#71cc6c"/>


    </LinearLayout>

</LinearLayout>
